test/runnable/pointer-to-field.crow
import
	crow/io/print: out, print

main void() unsafe, summon
	r mut r = 0,
	rp r mut* = &r
	x nat mut* = rp x
	*x := 3
	assert x == &rp->x

	rc r* = &r
	xc nat* = rc x
	assert xc == &rc->x
	assert *xc == r.x
	out print "{*xc}"

r record by-val, mut
	x mut nat
