test/compile-errors/set-field-of-by-val.crow
main void()
	r mut r = 0,
	r.x := 3

r record mut by-val
	x mut nat
